# PRISM

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yaml  pyproject.toml  start.bat  start.sh  stop.bat  stop.sh
assets/: style.css
src/: config.py  converter.py  ui.py  utils.py
